--- a/css/main-flow.css
+++ b/css/main-flow.css
@@ -107,6 +107,7 @@ a.footlnk:active {
 }
 .header-alt {
     display: block;
+    float: none;
 /*    display: none;*/
     max-width: 500px;
     margin-left: auto;
@@ -139,7 +140,7 @@ a.footlnk:active {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 195px;
+    max-width: 150px;
     height: auto;
     -webkit-filter: drop-shadow( 0px 3px 2px rgba(0,0,0,.5) );
     filter: drop-shadow( 0px 3px 2px rgba(0,0,0,.5) );
@@ -330,6 +331,7 @@ a.footlnk:active {
 }
 
 .about-left {
+    float: none;
     max-width: 100%;
     height: auto;
     margin-left: auto;
@@ -341,6 +343,7 @@ a.footlnk:active {
 }
 
 .about-right {
+    float: none;
     max-width: 90%;
     margin-left: auto;
     margin-right: auto;
@@ -366,8 +369,8 @@ a.footlnk:active {
 }
     
 .feature-scroll {
-    min-height: 950px;
-    background: url(/img/banner-7.jpg) no-repeat 48% 50% fixed;
+    min-height: 600px;
+    background: url(/img/banner-mob-1.png) no-repeat 48% 50% fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -378,8 +381,8 @@ a.footlnk:active {
 }
 
 .feature-scroll-1 {
-    min-height: 950px;
-    background: url(/img/banner-4.jpg) no-repeat 48% 50% fixed;
+    min-height: 600px;
+    background: url(/img/banner-mob-2.png) no-repeat 48% 50% fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -389,7 +392,7 @@ a.footlnk:active {
     padding-right: 10px;
 }
 .feature-scroll-2 {
-    min-height: 950px;
+    min-height: 600px;
     background: url(/img/banner-5.jpg) no-repeat 48% 50% fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -414,7 +417,7 @@ a.footlnk:active {
 .feature-scroll-container{
     margin-left: auto;
     margin-right: auto;
-    max-width: 1000px;
+    width: 100%;
     border: 0px;
     border-style: dashed;
     color: red;
@@ -424,8 +427,8 @@ a.footlnk:active {
     margin-left: 0;
     margin-right: auto;
     padding-left: 10px;
-    max-width: 45%;
-    min-width: 200px;
+    max-width: 53%;
+/*    min-width: 220px;*/
     border: 0px;
     border-style: dashed;
     color: aqua;
@@ -433,22 +436,21 @@ a.footlnk:active {
 }
 
 .feature-title {
-    padding-top: 150px;
+    padding-top: 0px;
     padding-bottom: 0px;
     margin-bottom: 0;
     font-family: 'Lato' , sans-serif;
     font-weight: 700;
-    font-size: 50px;
+    font-size: 40px;
     color: white;
     line-height: normal;
     text-shadow: 1px 1px 2px #333333;
 }
 .feature-description {
-    padding-top: -10px;
     padding-bottom: 20px;
     font-family: 'Lato' , sans-serif;
     font-weight: 300;
-    font-size: 25px;
+    font-size: 22px;
     color: white;
     text-shadow: 1px 1px 2px #333333;
 }
