--- a/mobile/css/style.css
+++ b/mobile/css/style.css
@@ -1,3 +1,6 @@
+body {
+    -webkit-font-smoothing: antialiased;
+}
 .icon-head {
     width: 100%;
     height: 150px;
@@ -38,5 +41,15 @@
     text-align: left;
     line-height: 1.4;
     margin: 0;
+    margin-bottom: 15px;
+}
+
+li {
+    font-family: 'Lato' , sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    color: #697D7F;
+    text-align: left;
+    line-height: 1.4;
     margin-bottom: 15px;
 }
