Updated mobile terms

--- a/mobile/css/style.css
+++ b/mobile/css/style.css
@@ -1,6 +1,12 @@
 body {
     -webkit-font-smoothing: antialiased;
 }
+
+a {
+	color: #D72500;
+	text-decoration: none;
+}
+
 .icon-head {
     width: 100%;
     height: 150px;
@@ -36,7 +42,7 @@ body {
 .copy-text {
     font-family: 'Lato' , sans-serif;
     font-weight: 400;
-    font-size: 17px;
+    font-size: 16px;
     color: #697D7F;
     text-align: left;
     line-height: 1.4;
@@ -47,9 +53,19 @@ body {
 li {
     font-family: 'Lato' , sans-serif;
     font-weight: 400;
-    font-size: 17px;
+    font-size: 16px;
     color: #697D7F;
     text-align: left;
     line-height: 1.4;
     margin-bottom: 15px;
+}
+
+.base-link {
+	margin: 0;
+	font-family: 'Lato' , sans-serif;
+    font-weight: 400;
+	font-size: 20px;
+    text-align: left;
+    margin-top: 20px;
+    padding-bottom: 30px;
 }
